# ProspectGeo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/prospectgeo/: config.py  main.py
src/prospectgeo/db/: __init__.py  client.py  db_manager.py  queries.py
src/prospectgeo/db/schemas/postgres/: qualification_results_schema.py
src/prospectgeo/etl/: extract.py  load.py  manager.py  transform.py
src/prospectgeo/utils/: logging_config.py
tests/etl/: test_extract.py  test_transform.py
